--- a/public/css/home.css
+++ b/public/css/home.css
@@ -28,12 +28,37 @@ body {
   height: 45px;
   width: auto;
 }
+.Logoutbtn{
+  height: 40px;
+  width: 110px;
+  font-size: 16px;
+  color: #f2ddcc;
+  cursor: pointer;
+  border-radius: 10px;
+  padding: 8px 12px;
+  background-color: #2b3247;
+  outline: none;
+  border: none;
+  transition: cubic-bezier(0.19, 1, 0.22, 1)0.2s;
+}
 
 .centre {
   height: 84vh;
   max-width: 680px;
   min-width: 64px;
   margin: auto;
+  background-color:transparent;
+}
+.chat-box{
+  width: 100%;
+  height: 100%;
+  flex-grow: 0.8;
+    overflow-y: auto;
+    padding: 20px;
+    /* background: #333; */
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
 }
 .profile {
   display: flex;
@@ -98,20 +123,99 @@ input {
   border: 1px dashed rgb(73, 73, 73);
 }
 
-.upload-label{
+.upload-label {
   cursor: pointer;
+  background-color: rgb(0, 140, 255);
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  transition: cubic-bezier(0.19, 1, 0.22, 1)0.2s;
+}
+.ri-upload-2-line{
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  /* background-color: aqua; */
+  color: white;
+  font-size: 20px;
+  transition: cubic-bezier(0.19, 1, 0.22, 1)0.2s;
+}
+.ri-upload-2-line:hover{
+  color: rgb(0, 140, 255);
+}
+.upload-label:hover{
+  background-color: white;
+  transition: cubic-bezier(0.19, 1, 0.22, 1)0.2s;
 }
 .send {
   background: transparent;
   border: none;
-  padding: 0;
+  /* padding: 0; */
   cursor: pointer;
+  background-color: rgb(0, 140, 255);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  transition: cubic-bezier(0.19, 1, 0.22, 1)0.2s;
 }
-
-.send img {
-  height: 50px;
+.send:hover{
+  background-color: white;
+  transition: cubic-bezier(0.19, 1, 0.22, 1)0.2s;
+}
+/* .send img {
+  height: 48px;
   width: auto;
   display: block;
+} */
+.send i {
+  font-size: 20px;
+  padding: 10px;
+  color: white;
+  font-weight: 800;
+  /* background-color: aqua; */
+  border-radius: 50%;
+  transition: cubic-bezier(0.19, 1, 0.22, 1)0.2s;
+}
+.send i:hover{
+  color:rgb(0, 140, 255) ;
+  transition: cubic-bezier(0.19, 1, 0.22, 1)0.2s;
+}
+.message {
+  padding: 14px;
+  border-radius: 10px;
+  margin: 8px 0;
+  max-width: 65%;
+  opacity: 0;
+  transform: translateY(10px);
+  animation: fadeIn 0.3s forwards;
+}
+@keyframes fadeIn {
+  to {
+      opacity: 1;
+      transform: translateY(0);
+  }
+}
+.user {
+  background: #007BFF;
+  text-align: right;
+  align-self: flex-end;
+  color: white;
+  font-size: 18px;
+  font-weight: 500;
+}
+.bot {
+  background: #444;
+  text-align: left;
+  align-self: flex-start;
+}
+.typing-text{
+  transition: cubic-bezier(0.19, 1, 0.22, 1)0.2s;
 }
 @media screen and (max-width: 480px) {
   body {
@@ -157,7 +261,14 @@ input {
     font-size: 12px;
     padding: 8px;
   }
-
+  .upload-label {
+    width: 30px;
+    height: 30px;
+  }
+  .ri-upload-2-line{
+    color: white;
+    font-size: 17px;
+  }
   .send img {
     height: 35px;
   }
