--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal AI</title>
-    <link rel="icon" type="image/png" href="../icons/logo.png" />
+    <link rel="icon" type="image/png" href="/public/icons/logo.png">
 
     <link
       rel="stylesheet"
@@ -13,13 +13,16 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="../css/home.css" />
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+    rel="stylesheet"/>
+    <link rel="stylesheet" href="/public/css/home.css" />
   </head>
   <body>
     <div class="header">
       <div class="logo">
         <a href="/html/root.html">
-          <img src="/icons/logo.png" class="icons" alt="logo" />
+          <img src="/public/icons/logo.png" class="icons" alt="logo" />
         </a>
       </div>
       <div class="profile">
@@ -29,32 +32,37 @@
           title="<%= user.displayName %>"
         />
       </div>
+      <a href="/html/root.html">
+          <button class="Logoutbtn">Logout</button>
+      </a>    
     </div>
     <div class="centre">
       <div
         id="typing-text"
         data-text="Hello <%= user.displayName %>, Welcome to your Personal Assistant!"
       ></div>
+        <div id="chat-box" class="chat-box"></div>
 
-<a href="/html/root.html">
-    <button>Logout</button>
-</a>    </div>
+</div>
+
 
     <div class="footer">
       <form class="search" encoding="multipart/form-data">
         <input type="file" id="file-input" hidden />
         <label for="file-input" class="upload-label">
-          <img src="/icons/upload.png" class="icons" alt="Upload Iocn" />
+          <!-- <img src="/icons/upload.png" class="icons" alt="Upload Iocn" /> -->
+          <i class="ri-upload-2-line"></i>
         </label>
 
-        <input type="text" placeholder="What do you want!" />
+        <input type="text" id="user-input" placeholder="What do you want!" />
 
-        <button class="send">
-          <img src="../icons/send.png" class="icons" alt="Send Icon" />
+        <button class="send" onclick="sendMessage()" onclick="remove()">
+          <!-- <img src="../icons/send.png" class="icons" alt="Send Icon" /> -->
+          <i class="ri-arrow-up-line"></i>
         </button>
       </form>
     </div>
 
-    <script src="../js/home.js"></script>
+    <script src="/public/js/home.js"></script>
   </body>
 </html>
